--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Olá mundo do vscode!</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+Ullam cupiditate et maiores minus, consequuntur mollitia unde,
+enim fuga vitae praesentium qui culpa corporis deleniti inventore 
+quae animi suscipit aut quis.</p>
 </body>
 </html>
