atualização branch nova

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 Ullam cupiditate et maiores minus, consequuntur mollitia unde,
 enim fuga vitae praesentium qui culpa corporis deleniti inventore 
 quae animi suscipit aut quis.</p>
+<h2>Atualização dessa branch nova (feature2.0)</h2>
 </body>
 </html>
